[gd_scene load_steps=12 format=2]

[ext_resource path="res://Juego/EstacionRecarga/Portal1.png" type="Texture" id=1]
[ext_resource path="res://Juego/EstacionRecarga/Portal3.png" type="Texture" id=2]
[ext_resource path="res://Juego/EstacionRecarga/Portal2.png" type="Texture" id=3]
[ext_resource path="res://Juego/EstacionRecarga/Puerta-L.gd" type="Script" id=4]
[ext_resource path="res://Juego/EstacionRecarga/Puerta-LActivado.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/EstacionRecarga/Puerta-LSuper.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Activado"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/spaceBuilding_024:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.63728 ),
"update": 0,
"values": [ Vector2( 0, 33 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/spaceBuilding_023:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.659754 ),
"update": 0,
"values": [ Vector2( 0, -33 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/spaceBuilding_008:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/spaceBuilding_008:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}

[sub_resource type="Animation" id=3]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/spaceBuilding_024:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.63728, 1 ),
"update": 0,
"values": [ Vector2( 0, 33 ), Vector2( 0, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/spaceBuilding_023:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.659754, 1 ),
"update": 0,
"values": [ Vector2( 0, -33 ), Vector2( 0, -80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/spaceBuilding_008:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/spaceBuilding_008:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/spaceBuilding_008:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0820313, 0.019146, 0.019146, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SuperActivado"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/spaceBuilding_008:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.4, 2.4 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="CircleShape2D" id=5]
radius = 517.193

[node name="Puerta-L" type="Node2D" groups=[
"minimapa",
]]
script = ExtResource( 4 )

[node name="Sprites" type="Node2D" parent="."]
rotation = 6.28319
scale = Vector2( 3, 3 )

[node name="spaceBuilding_024" type="Sprite" parent="Sprites"]
position = Vector2( 0, 33 )
texture = ExtResource( 3 )

[node name="spaceBuilding_023" type="Sprite" parent="Sprites"]
position = Vector2( 0, -33 )
rotation = 3.14159
texture = ExtResource( 1 )

[node name="spaceBuilding_008" type="Sprite" parent="Sprites"]
modulate = Color( 0.0820313, 0.019146, 0.019146, 1 )
rotation = 6.28319
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawning"
anims/Activado = SubResource( 1 )
anims/Default = SubResource( 2 )
anims/Spawning = SubResource( 3 )
anims/SuperActivado = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="DetectorJugador" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorJugador"]
shape = SubResource( 5 )
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="DetectorJugador" to="." method="_on_DetectorJugador_body_entered"]
